; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2read.c_locate_pdi_sibling.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_dwarf2read.c_locate_pdi_sibling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.partial_die_info = type { i8*, i64, i32 }
%struct.dwarf2_cu = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.partial_die_info*, i8*, i32*, %struct.dwarf2_cu*)* @locate_pdi_sibling to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @locate_pdi_sibling(%struct.partial_die_info* %0, i8* %1, i32* %2, %struct.dwarf2_cu* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca %struct.partial_die_info*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.dwarf2_cu*, align 8
  %10 = alloca %struct.partial_die_info, align 8
  store %struct.partial_die_info* %0, %struct.partial_die_info** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store %struct.dwarf2_cu* %3, %struct.dwarf2_cu** %9, align 8
  %11 = load %struct.partial_die_info*, %struct.partial_die_info** %6, align 8
  %12 = getelementptr inbounds %struct.partial_die_info, %struct.partial_die_info* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %4
  %16 = load %struct.partial_die_info*, %struct.partial_die_info** %6, align 8
  %17 = getelementptr inbounds %struct.partial_die_info, %struct.partial_die_info* %16, i32 0, i32 0
  %18 = load i8*, i8** %17, align 8
  store i8* %18, i8** %5, align 8
  br label %43

19:                                               ; preds = %4
  %20 = load %struct.partial_die_info*, %struct.partial_die_info** %6, align 8
  %21 = getelementptr inbounds %struct.partial_die_info, %struct.partial_die_info* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 8
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %19
  %25 = load i8*, i8** %7, align 8
  store i8* %25, i8** %5, align 8
  br label %43

26:                                               ; preds = %19
  br label %27

27:                                               ; preds = %26, %42
  %28 = load i32*, i32** %8, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = load %struct.dwarf2_cu*, %struct.dwarf2_cu** %9, align 8
  %31 = call i8* @read_partial_die(%struct.partial_die_info* %10, i32* %28, i8* %29, %struct.dwarf2_cu* %30)
  store i8* %31, i8** %7, align 8
  %32 = getelementptr inbounds %struct.partial_die_info, %struct.partial_die_info* %10, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = icmp eq i64 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %27
  %36 = load i8*, i8** %7, align 8
  store i8* %36, i8** %5, align 8
  br label %43

37:                                               ; preds = %27
  %38 = load i8*, i8** %7, align 8
  %39 = load i32*, i32** %8, align 8
  %40 = load %struct.dwarf2_cu*, %struct.dwarf2_cu** %9, align 8
  %41 = call i8* @locate_pdi_sibling(%struct.partial_die_info* %10, i8* %38, i32* %39, %struct.dwarf2_cu* %40)
  store i8* %41, i8** %7, align 8
  br label %42

42:                                               ; preds = %37
  br label %27

43:                                               ; preds = %35, %24, %15
  %44 = load i8*, i8** %5, align 8
  ret i8* %44
}

declare dso_local i8* @read_partial_die(%struct.partial_die_info*, i32*, i8*, %struct.dwarf2_cu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
